<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filtersActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FiltersActivity">

    <ImageView
        android:id="@+id/filtersImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="280dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_24" />

    <TextView
        android:id="@+id/saveButton"
        android:layout_width="144dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="280dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/save_button"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/filtersVerticalMenu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="36dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/filtersLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/rotateFrame"
                android:layout_width="192dp"
                android:layout_height="96dp">

                <ImageView
                    android:id="@+id/rotateImage"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    app:srcCompat="@mipmap/ic_filters" />

                <TextView
                    android:id="@+id/rotateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="96dp"
                    android:gravity="center"
                    android:text="@string/filters_rotate"
                    android:textColor="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/scalingFrame"
                android:layout_width="192dp"
                android:layout_height="96dp">

                <ImageView
                    android:id="@+id/scalingImage"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    app:srcCompat="@mipmap/ic_filters" />

                <TextView
                    android:id="@+id/scalingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="96dp"
                    android:gravity="center"
                    android:text="@string/filters_scaling"
                    android:textColor="@color/white" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/retouchFrame"
                android:layout_width="192dp"
                android:layout_height="96dp">

                <ImageView
                    android:id="@+id/retouchImage"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    app:srcCompat="@mipmap/ic_filters" />

                <TextView
                    android:id="@+id/retouchTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="96dp"
                    android:gravity="center"
                    android:text="@string/filters_retouch"
                    android:textColor="@color/white" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/definitionFrame"
                android:layout_width="192dp"
                android:layout_height="96dp">

                <ImageView
                    android:id="@+id/definitionImage"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    app:srcCompat="@mipmap/ic_filters" />

                <TextView
                    android:id="@+id/definitionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="96dp"
                    android:gravity="center"
                    android:text="@string/filters_definition"
                    android:textColor="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/affinisFrame"
                android:layout_width="192dp"
                android:layout_height="96dp">

                <ImageView
                    android:id="@+id/affinisImage"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    app:srcCompat="@mipmap/ic_filters" />

                <TextView
                    android:id="@+id/affinisTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="96dp"
                    android:gravity="center"
                    android:text="@string/filters_affinis"
                    android:textColor="@color/white" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/selectFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:text="@string/select_filters"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>